fix ui: set default img for restaurant fail to load img and truncate long content to maintain layout

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -88,7 +88,7 @@ header {
   text-align: center;
   font-size: 3rem;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-
+  word-wrap: break-word;
 }
 
 @media screen and (max-width: 992px) {
